--- a/solver/index.html
+++ b/solver/index.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html" class="active"><strong aria-hidden="true">3.</strong> 求解器</a></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">4.</strong> 资源</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">5.</strong> 术语表</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html" class="active"><strong aria-hidden="true">3.</strong> 求解器</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 优化</div></li></ol></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">4.</strong> 资源</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">5.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -179,7 +179,13 @@
                         <h1 id="求解器solver"><a class="header" href="#求解器solver">求解器(Solver)</a></h1>
 <p>顾名思义, 求解器是用于自动求解推箱子关卡的程序.</p>
 <p>寻路算法是在<strong>路径点</strong>组成的图中寻找一条从<strong>初始位置</strong>到<strong>最终位置</strong>的路径.<br />
-求解器则是在<strong>状态</strong>组成的图中寻找一条从<strong>初始状态</strong>到<strong>最终状态</strong>的路径.</p>
+求解器则是在<strong>状态</strong>组成的图中寻找一条从<strong>初始状态</strong>到<strong>最终状态</strong>的路径, 即移动箱子的顺序.</p>
+<h2 id="搜索算法"><a class="header" href="#搜索算法">搜索算法</a></h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/A*_search_algorithm">A* 搜索算法</a>.</li>
+<li><a href="https://en.wikipedia.org/wiki/Iterative_deepening_A*">IDA* 搜索算法</a>.</li>
+<li><a href="https://ieeexplore.ieee.org/document/9231929">FESS 搜索算法</a>: 该算法被知名推箱子求解器 <a href="https://festival-solver.site/">Festival</a> 所使用.</li>
+</ul>
 <p>本文将描述如何创建一个基于 <a href="https://en.wikipedia.org/wiki/A*_search_algorithm">A* 搜索算法</a>的求解器.</p>
 <h2 id="表示状态"><a class="header" href="#表示状态">表示状态</a></h2>
 <p>顾名思义, 状态用于表示关卡的状态.</p>
@@ -189,6 +195,8 @@
 }
 </code></pre>
 <p>可以看出状态仅包含了玩家的位置和箱子的位置, 因为玩家和箱子是关卡中可移动对象. 保存它们的位置足以描述整个关卡的状态. 其他元素, 如墙壁/目标位置等是静态的，它们的位置不会改变, 因此只需要从关卡的初始状态中获取它们的位置.</p>
+<hr />
+<p>TODO: 启发式函数 -&gt; 只关心箱子位置 -&gt; 仅当箱子位置改变时产生新的状态.</p>
 <p>状态是图里的节点, 从初始状态开始探索其相邻的节点, 即<a href="https://en.wikipedia.org/wiki/Neighbourhood_(graph_theory)">邻域</a>.</p>
 <p>通过下面函数来生成当前状态的派生状态, 即相邻的状态:</p>
 <pre><code class="language-rs">impl State {
@@ -199,9 +207,10 @@
 </code></pre>
 <p>通过启发式算法优先探索最接近最终状态的节点.</p>
 <p>TODO</p>
+<hr />
 <h2 id="优化器optimizer"><a class="header" href="#优化器optimizer">优化器(Optimizer)</a></h2>
 <p>对已知的路径进行<a href="https://en.wikipedia.org/wiki/Local_search_(optimization)">局部搜索</a>, 以寻找更佳的路径.</p>
-<p>TODO</p>
+<p>TODO: 速度优先的求解策略 + 优化器优化 = 快速得到一个不那么差的解决方案.</p>
 
                     </main>
 
