--- a/print.html
+++ b/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Sokoban Tutorial</title>
+        <title>推箱子教程</title>
         <meta name="robots" content="noindex">
 
 
@@ -142,7 +142,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Sokoban Tutorial</h1>
+                    <h1 class="menu-title">推箱子教程</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
