--- a/print.html
+++ b/print.html
@@ -184,7 +184,7 @@
 <p><img src="assets/first_sokoban_15.png" alt="First Sokoban #15" /></p>
 <p>截至 2024 年, 最新版本推箱子(The Sokoban, みんなの倉庫番)于 2019 年 8 月发行于 PlayStation 4 平台.<sup class="footnote-reference"><a href="#1">1</a></sup></p>
 <p><img src="assets/the_sokoban.jpg" alt="The Sokoban" /></p>
-<p>可惜是最新版本的推箱在角色控制方面相较于其最初的版本并未见明显改进 😔. 本文后续将介绍一种纯鼠标控制的角色控制方法.</p>
+<p>可惜是最新版本的推箱在角色控制方面相较于其最初的版本并未见明显改进, 本文后续将介绍一种纯鼠标控制的角色控制方法 🖱️.</p>
 <p>推荐视频 🎥: <a href="https://www.bilibili.com/video/BV1Ph41117YT%3E">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>.</p>
 <h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
 <p>本文以 "推箱子" 游戏为案例, 深入浅出的描述软件开发过程. 通过案例讲解有以下目的:</p>
