--- a/introduction.html
+++ b/introduction.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html" class="active">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">4.</strong> 资源</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">5.</strong> 术语表</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html" class="active">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 游程编码</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">4.</strong> 资源</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">5.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -184,7 +184,6 @@
 <p>截至 2024 年, 最新版本推箱子(The Sokoban, みんなの倉庫番)于 2019 年 8 月发行于 PlayStation 4 平台.<sup class="footnote-reference"><a href="#1">1</a></sup></p>
 <p><img src="assets/the_sokoban.jpg" alt="The Sokoban" /></p>
 <p>可惜是最新版本的推箱在角色控制方面相较于其最初的版本并未见明显改进, 本文后续将介绍一种纯鼠标控制的角色控制方法 🖱️.</p>
-<p>推荐视频 🎥: <a href="https://www.bilibili.com/video/BV1Ph41117YT%3E">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>.</p>
 <h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
 <p>本文以 "推箱子" 游戏为案例, 深入浅出的描述软件开发过程. 通过案例讲解有以下目的:</p>
 <ul>
@@ -215,6 +214,8 @@
 <li><a href="https://github.com/shenmian/soukoban">ShenMian/soukoban</a>: 推箱子相关算法实现.</li>
 <li><a href="https://github.com/shenmian/sokoban-rs">ShenMian/sokoban-rs</a>: 推箱子游戏实现, 使用 Bevy 引擎.</li>
 </ul>
+<h2 id="拓展阅读"><a class="header" href="#拓展阅读">拓展阅读</a></h2>
+<p>推荐视频 🎥: <a href="https://www.bilibili.com/video/BV1Ph41117YT%3E">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>.</p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://www.sokoban.jp/history.html">https://www.sokoban.jp/history.html</a></p>
 </div>
