--- a/level/run_length_encoding.html
+++ b/level/run_length_encoding.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>行程编码 - 推箱子教程</title>
+        <title>游程编码 - 推箱子教程</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/run_length_encoding.html" class="active"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">4.</strong> 资源</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">5.</strong> 术语表</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/run_length_encoding.html" class="active"><strong aria-hidden="true">1.2.</strong> 游程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">4.</strong> 资源</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">5.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,8 +176,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="行程编码run-length-encoding"><a class="header" href="#行程编码run-length-encoding">行程编码(Run-length encoding)</a></h1>
-<p><a href="https://en.wikipedia.org/wiki/Run-length_encoding">行程编码</a>(run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
+                        <h1 id="游程编码"><a class="header" href="#游程编码">游程编码</a></h1>
+<p>游程编码(run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
 <pre><code class="language-txt">###
 #.###
 #*$ #
@@ -222,7 +222,7 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
     Ok(result)
 }
 </code></pre>
-<p>该方法不会使用括号包裹重复的相连字串以提高压缩率.</p>
+<p>该方法不会使用括号包裹重复的相连子串以提高压缩率.</p>
 <h2 id="解码"><a class="header" href="#解码">解码</a></h2>
 <p>下面是一个 RLE 解码函数的实现:</p>
 <pre><code class="language-rs">pub fn rle_decode(str: &amp;str) -&gt; Result&lt;String, DecodeRleError&gt; {
@@ -267,6 +267,10 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
     Ok(result)
 }
 </code></pre>
+<h2 id="拓展阅读"><a class="header" href="#拓展阅读">拓展阅读</a></h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Run-length_encoding">https://en.wikipedia.org/wiki/Run-length_encoding</a>.</li>
+</ul>
 
                     </main>
 
